# engram-mcp

./: .envrc  .gitignore  CLAUDE.md  DESIGN_DOCUMENTATION.md  LICENSE  MEMORY_ARCHITECTURE_ROADMAP.md  README.md  configure_ollama_models.py  monitor.py  pyproject.toml  pytest.ini  run_all_tests.sh  setup_local_models.sh  test_production_full.py  test_production_integration.py  test_production_trace.py  test_quick.py  test_real_production.py  trace_request_flow.py  verify_chainmind_integration.py
config/: chainmind.yaml
docs/: HITL-integration-strategy.md  MVP.md  README.md  architecture.md  development-philosophy.md  engram-autonomous-design.md  engram-cfs-integration.md  engram-graph-design-v2.md  engram-optimization-plan.md  getting-started.md  project-knowledge-encoding.md  prompt-guide.md  seed-data-strategy.md  test-strategy.md
docs/chainmind-integration/: CHAINMIND_AUDIT_IMPLEMENTATION_SUMMARY.md  CHAINMIND_CONFIGURATION_SUMMARY.md  CHAINMIND_DISABLE.md  CHAINMIND_INTEGRATION.md  CHAINMIND_SETUP.md  README.md  (+2 more)
engram/: __init__.py  chainmind_helper.py  graph.py  prompt_generator.py  query_logger.py  server.py  storage.py
scripts/: bootstrap.py  organize_docs.sh  upgrade_embeddings.py
seeds/: ai-ml-mastery.json  ingest.py  software-dev-mastery.json  studioflow-wisdom.json  youtube-mastery.json
tests/: conftest.py  run_comprehensive_tests.sh  test_auto_extraction.py  test_chainmind_helper_audit.py  test_chainmind_helper_comprehensive.py  test_chainmind_integration.py  test_demos.py  test_e2e_comprehensive.py  test_edge_cases.py  test_edge_cases_audit.py  test_error_handling_comprehensive.py  test_graph_queries.py  test_hybrid_search.py  test_implicit_validation.py  test_integration_audit.py  test_performance_audit.py  test_performance_comprehensive.py  test_prompt_generator_audit.py  test_prompt_generator_comprehensive.py  test_role_context.py  test_scoring_formula.py  test_search_quality.py  test_value_validation.py
(+22 files in other folders)
